--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,9 +8,9 @@ bevy = "0.17.3"
 bevy_rapier3d = "0.32.0"
 color = "0.3.2"
 
-[features]
+# [features]
 # Use this to enable dynamic linking for Bevy dependencies in development
-dynamic_linking = ["bevy/dynamic_linking"]
+# dynamic_linking = ["bevy/dynamic_linking"]
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
